Scrap work from past several days of debugging.